--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-demot",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,10 @@
     "gulp",
     "babel"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KeithTt/gulp-demo.git"
+  },
   "author": "KeithTt",
   "license": "ISC",
   "devDependencies": {
