--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-demot",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/KeithTt/gulp-demo.git"
+    "url": "https://github.com/KeithTt/gulp-demot.git"
   },
   "author": "KeithTt",
   "license": "ISC",
